--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-safe-area-context": "^3.4.0",
     "react-native-screens": "^3.12.0"
   },
